# eightfold_assignment_candidate-profile_transformers-

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  README.md  pyproject.toml  render.yaml  requirements-api.txt  requirements-web.txt  requirements.txt
data/samples/: ats.json  github_profile.json  recruiter.csv  recruiter_notes.txt  resume.txt
docs/: DESIGN.md  SUBMISSION.md
output/: custom_profile.json  default_profile.j  default_profile.json
src/candidate_transformer/: __main__.py
src/candidate_transformer/api/: __init__.py  main.py  schemas.py  service.py
src/candidate_transformer/cli/: __init__.py  main.py
src/candidate_transformer/confidence/: __init__.py  scorer.py
src/candidate_transformer/extract/: __init__.py  field_extractor.py
src/candidate_transformer/ingest/: __init__.py  csv_ingestor.py  github_ingestor.py  json_ingestor.py  manual_ingestor.py  notes_ingestor.py  resume_ingestor.py
src/candidate_transformer/merge/: __init__.py  merger.py
src/candidate_transformer/models/: __init__.py  canonical.py  config.py
src/candidate_transformer/normalize/: __init__.py  date_normalizer.py  location_normalizer.py  phone_normalizer.py  skill_normalizer.py
src/candidate_transformer/pipeline/: __init__.py  orchestrator.py
src/candidate_transformer/project/: __init__.py  output_projector.py
src/candidate_transformer/validate/: __init__.py  schema_validator.py
tests/: test_api.py  test_manual_ingestor.py  test_pipeline.py
web/: app.py
