[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "candidate-transformer"
version = "1.0.0"
description = "Multi-source candidate data transformer for Eightfold internship assessment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "phonenumbers>=8.13.0",
    "python-dateutil>=2.9.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
candidate-transformer = "candidate_transformer.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
